fixed modal occlusion mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,29 +177,23 @@ body {
 
 /* Modal Content */
 .modal-content {
+    
     z-index: 3;
-    -webkit-user-select: none;
-    /* Safari */
-    -moz-user-select: none;
-    /* Firefox */
-    -ms-user-select: none;
-    /* IE10+/Edge */
-    user-select: none;
-    /* Standard */
+    
     display: inline-block;
     background-color: #222222;
     margin: auto;
     padding: 0;
     border: 1px solid #888;
     width: 99%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+   
     animation-name: animatetop;
     animation-duration: 0.4s;
     width: 400px;
     mix-blend-mode: hard-light;
-    margin: 0 auto;
-    top: 345px;
-    position: absolute;
+   
+    top: 300px;
+    position:absolute;
     left: 0;
     right: 0;
     justify-items: center;
@@ -215,7 +209,7 @@ body {
     }
 
     to {
-        top: 345px;
+        top: 300px;
         opacity: 1
     }
 }
